@@ -1,3 +1,7 @@
+2011-03-15  Oliver Hader  <oliver.hader@typo3.org>
+
+	* Fixed bug #13040: Module name is not passed along in links
+
 2011-02-10  Oliver Hader  <oliver.hader@typo3.org>
 
 	* Release of version 3.2.1
